[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Bin Wang <wkk@user.noreply.github.com>"]
description = "My solutions to Advent of Code puzzles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"]}
itertools = "0.10.3"
scan_fmt = "0.2.6"
